[gd_scene load_steps=7 format=4 uid="uid://bkpv1lt0oxgl7"]

[ext_resource type="PackedScene" uid="uid://crfpgs7m65kr2" path="res://content/bases/level_base.tscn" id="1_5pm44"]
[ext_resource type="Texture2D" uid="uid://bjvvhs886uyl0" path="res://assets/tiles/hover_tile.png" id="2_nmoru"]
[ext_resource type="Script" uid="uid://dysl6ca35mti0" path="res://content/levels/tutorial_text_controler.gd" id="3_jukad"]
[ext_resource type="PackedScene" uid="uid://cqkwtlr5v4t2k" path="res://content/level_specific/tutorial_text.tscn" id="4_2jvad"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hrw15"]
texture = ExtResource("2_nmoru")
0:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_3o461"]
sources/0 = SubResource("TileSetAtlasSource_hrw15")

[node name="level_2" instance=ExtResource("1_5pm44")]
level_name = "First Explosions"

[node name="Foreground" parent="GlobalTileMap" index="1"]
tile_map_data = PackedByteArray("AAD//wwAAAAAAAIAAAD//wsAAAAAAAEAAAD//woAAAAAAAEAAAD//wkAAAAAAAEAAAD//wgAAAAEAAIAAAD//wcAAAADAAEAAAD//wYAAAADAAEAAAD//wUAAAADAAEAAAD//wQAAAAEAAEAAAD//wMAAAAAAAEAAAD//wIAAAAAAAEAAAD//wEAAAAAAAEAAAD//wAAAAAAAAEAAAD/////AAAAAAAAAAAUAAwAAAACAAIAAAATAAwAAAABAAIAAAASAAwAAAABAAIAAAARAAwAAAABAAIAAAAQAAwAAAABAAIAAAAPAAwAAAABAAIAAAAOAAwAAAABAAIAAAANAAwAAAABAAIAAAAEAAwAAAABAAIAAAADAAwAAAABAAIAAAACAAwAAAABAAIAAAABAAwAAAABAAIAAAAAAAwAAAABAAIAAAAUAAsAAAACAAEAAAAUAAoAAAACAAEAAAAUAAkAAAACAAEAAAAUAAgAAAACAAEAAAAUAAcAAAAHAAIAAAAUAAYAAAADAAEAAAAUAAUAAAADAAEAAAAUAAQAAAADAAEAAAAUAAMAAAAHAAEAAAAUAAIAAAACAAEAAAAUAAEAAAACAAEAAAAUAAAAAAACAAEAAAAUAP//AAACAAAAAAATAP//AAABAAAAAAASAP//AAABAAAAAAARAP//AAABAAAAAAAQAP//AAABAAAAAAAPAP//AAABAAAAAAAOAP//AAABAAAAAAANAP//AAABAAAAAAAMAP//AAABAAAAAAALAP//AAABAAAAAAAKAP//AAABAAAAAAAJAP//AAABAAAAAAAIAP//AAABAAAAAAAHAP//AAABAAAAAAAGAP//AAABAAAAAAAFAP//AAABAAAAAAAEAP//AAABAAAAAAADAP//AAABAAAAAAACAP//AAABAAAAAAABAP//AAABAAAAAAAAAP//AAABAAAAAAAFAAwAAAABAAIAAAAGAAwAAAABAAIAAAAHAAwAAAABAAIAAAAIAAwAAAABAAIAAAAJAAwAAAABAAIAAAAKAAwAAAABAAIAAAALAAwAAAABAAIAAAAMAAwAAAABAAIAAAATAAAAAAABAAEAAAASAAAAAAABAAEAAAARAAAAAAABAAEAAAAQAAAAAAABAAEAAAAPAAAAAAABAAEAAAAOAAAAAAABAAEAAAANAAAAAAABAAEAAAAMAAAAAAABAAEAAAALAAAAAAABAAEAAAAKAAAAAAABAAEAAAAJAAAAAAABAAEAAAAIAAAAAAABAAEAAAAHAAAAAAABAAEAAAAGAAAAAAABAAEAAAAFAAAAAAABAAEAAAAEAAAAAAABAAEAAAADAAAAAAABAAEAAAACAAAAAAABAAEAAAABAAAAAAABAAEAAAAAAAAAAAABAAEAAAATAAsAAAABAAEAAAATAAoAAAABAAEAAAATAAkAAAABAAEAAAATAAgAAAABAAEAAAATAAcAAAABAAAAAAASAAsAAAABAAEAAAASAAoAAAABAAEAAAASAAkAAAABAAEAAAASAAgAAAAGAAIAAAASAAcAAAAAAAAAAAARAAsAAAABAAEAAAARAAoAAAABAAEAAAARAAkAAAABAAEAAAARAAgAAAABAAAAAAAQAAsAAAABAAEAAAAQAAoAAAABAAEAAAAQAAkAAAABAAEAAAAQAAgAAAABAAAAAAAPAAsAAAABAAEAAAAPAAoAAAABAAEAAAAPAAkAAAABAAEAAAAPAAgAAAAFAAIAAAAPAAcAAAACAAAAAAAOAAsAAAABAAEAAAAOAAoAAAABAAEAAAAOAAkAAAABAAEAAAAOAAgAAAABAAEAAAAOAAcAAAAFAAIAAAANAAsAAAABAAEAAAANAAoAAAABAAEAAAANAAkAAAABAAEAAAANAAgAAAAGAAIAAAANAAcAAAAAAAEAAAAMAAsAAAABAAEAAAAMAAoAAAAGAAIAAAAMAAkAAAAAAAEAAAAMAAgAAAAAAAAAAAALAAsAAAABAAEAAAALAAoAAAABAAAAAAAKAAsAAAABAAEAAAAKAAoAAAAFAAIAAAAKAAkAAAACAAAAAAAJAAsAAAABAAEAAAAJAAoAAAABAAEAAAAJAAkAAAABAAAAAAAIAAsAAAABAAEAAAAIAAoAAAABAAEAAAAIAAkAAAAFAAIAAAAIAAgAAAACAAAAAAAHAAsAAAABAAEAAAAHAAoAAAABAAEAAAAHAAkAAAABAAEAAAAHAAgAAAAFAAIAAAAHAAcAAAACAAEAAAAGAAsAAAABAAEAAAAGAAoAAAABAAEAAAAGAAkAAAABAAEAAAAGAAgAAAABAAEAAAAGAAcAAAABAAEAAAAFAAsAAAABAAEAAAAFAAoAAAABAAEAAAAFAAkAAAABAAEAAAAFAAgAAAABAAEAAAAFAAcAAAAGAAIAAAAEAAsAAAABAAEAAAAEAAoAAAABAAEAAAAEAAkAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAABAAAAAAADAAsAAAABAAEAAAADAAoAAAABAAEAAAADAAkAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAAAAAACAAsAAAABAAEAAAACAAoAAAABAAEAAAACAAkAAAABAAEAAAACAAgAAAAGAAIAAAACAAcAAAAAAAAAAAABAAsAAAABAAEAAAABAAoAAAABAAEAAAABAAkAAAABAAEAAAABAAgAAAABAAAAAAAAAAsAAAABAAEAAAAAAAoAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAABAAAAAAAKAAIAAAABAAIAAAAKAAEAAAABAAEAAAAJAAMAAAACAAIAAAAJAAIAAAAFAAEAAAAJAAEAAAABAAEAAAAIAAUAAAACAAIAAAAIAAQAAAACAAEAAAAIAAMAAAAFAAEAAAAIAAIAAAABAAEAAAAIAAEAAAABAAEAAAATAAMAAAABAAIAAAATAAIAAAABAAEAAAATAAEAAAABAAEAAAASAAMAAAAAAAIAAAASAAIAAAAGAAEAAAASAAEAAAABAAEAAAARAAIAAAABAAIAAAARAAEAAAABAAEAAAAQAAIAAAABAAIAAAAQAAEAAAABAAEAAAAPAAMAAAACAAIAAAAPAAIAAAAFAAEAAAAPAAEAAAABAAEAAAAOAAYAAAACAAEAAAAOAAUAAAACAAEAAAAOAAQAAAACAAEAAAAOAAMAAAAFAAEAAAAOAAIAAAABAAEAAAAOAAEAAAABAAEAAAANAAYAAAAAAAEAAAANAAUAAAAAAAEAAAANAAQAAAAAAAEAAAANAAMAAAAGAAEAAAANAAIAAAABAAEAAAANAAEAAAABAAEAAAAMAAMAAAAAAAIAAAAMAAIAAAAGAAEAAAAMAAEAAAABAAEAAAALAAIAAAABAAIAAAALAAEAAAABAAEAAAAHAAYAAAAHAAIAAAAHAAUAAAAEAAEAAAAHAAQAAAAAAAEAAAAHAAMAAAAGAAEAAAAHAAIAAAABAAEAAAAHAAEAAAABAAEAAAAGAAYAAAABAAAAAAAGAAMAAAAAAAIAAAAGAAIAAAAGAAEAAAAGAAEAAAABAAEAAAAFAAYAAAAAAAAAAAAFAAIAAAABAAIAAAAFAAEAAAABAAEAAAAEAAIAAAABAAIAAAAEAAEAAAABAAEAAAADAAIAAAABAAIAAAADAAEAAAABAAEAAAACAAMAAAACAAIAAAACAAIAAAAFAAEAAAACAAEAAAABAAEAAAABAAMAAAABAAIAAAABAAIAAAABAAEAAAABAAEAAAABAAEAAAAAAAQAAAACAAIAAAAAAAMAAAAFAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAEAAAATAAYAAAADAAgAAAA=")

[node name="Ores" parent="GlobalTileMap" index="2"]
tile_map_data = PackedByteArray("AAAPAAkAAQACAAAAAAAQAAkAAQACAAAAAAAQAAoAAQACAAAAAAARAAoAAQACAAAAAAABAAIAAQAEAAAAAAABAAEAAQAEAAAAAAAAAAEAAQAEAAAAAAA=")

[node name="Extras" parent="GlobalTileMap" index="3"]
tile_map_data = PackedByteArray("AAADAAMAAgAEAAAAAAADAAQAAgAEAAAAAAADAAUAAgAEAAAAAAAJAAQAAgAEAAAAAAAJAAUAAgAEAAAAAAARAAMAAgAEAAAAAAARAAQAAgAEAAAAAAARAAUAAgAEAAAAAAAGAAUAAgACAAAAAAAQAAcAAgACAAAAAAAKAAgAAgAEAAIAAAACAAYAAgAIAAAAAAA=")

[node name="HoverLayer" parent="GlobalTileMap" index="4"]
tile_set = SubResource("TileSet_3o461")

[node name="Player" parent="." index="4"]
position = Vector2(8, 120)

[node name="TutorialTextControler" type="Node" parent="." index="7"]
script = ExtResource("3_jukad")

[node name="FirstTutorialText" parent="TutorialTextControler" index="0" instance=ExtResource("4_2jvad")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 74.0
offset_top = 11.0
offset_right = 114.0
offset_bottom = 34.0
grow_horizontal = 1
grow_vertical = 1
text = "Drag a bomb to place it"

[node name="SecondTutorialText" parent="TutorialTextControler" index="1" instance=ExtResource("4_2jvad")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 44.0
offset_top = 147.0
offset_right = 83.9996
offset_bottom = 173.0
grow_horizontal = 1
grow_vertical = 1
text = "Detonate bombs by right clicking them"

[editable path="GlobalTileMap"]
